--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
 	max-width: 960px;
 	margin: 0 auto;
 }
+.wrap{
+	max-width: 960px;
+	margin: 0 auto;
+}
 
 img{
 	max-width:100%;
@@ -398,7 +402,7 @@ img{
 /*==============================*/
 
 /*about設定*/
-#wrap{
+#about_column{
 	clear: both;
 	margin-bottom: 20px;
 	color: #A4A4A4;
