--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* css Document */
 
+/*共通設定*/
 #body{
 	background: #FFF;
 	font-size: 14px;
@@ -8,23 +9,44 @@
 	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "sans-serif";
 	color: #333;
 }
-
 #contents{
-	width: 960px;
+/*	width: 960px;
 	height: 600px;
+*/	margin: 0 auto;
+}
+
+.inner{
+	max-width: 960px;
 	margin: 0 auto;
+}
+.wrap{
+	max-width: 960px;
+	margin: 0 auto;
+}
+
+img{
+	max-width:100%;
 }
 
 .header_container{
 	overflow: hidden;
 	border-bottom: #5ec2c6 5px solid;
-	margin: 0 -500px;
+/*	margin: 0 -500px;
 	padding: 0 500px;
-}
-
+*/}
 #header h1{
-	margin: 30px 0px 0px 30px;
+	margin: 30px 0px 20px 20px;
 	float: left;
+}
+#header h1 a{
+	width: 210px;
+	height: 35px;
+	background: url(../img/index_title02.png) no-repeat;
+	display: block;
+	text-indent: -9999px;
+}
+#header h1 a:hover{
+	background-image: url(../img/index_title03.png);
 }
 
 #nav{
@@ -32,11 +54,13 @@
 	margin: 50px 20px 10px;
 	text-align: center;
 }
-
+#nav ul{
+	display: block;
+}
 #nav li{
 	display: inline-block;
 	margin: 0 10px;
-	color:　#2CC6C8;
+	color: #5ec2c6;
 }
 #nav li a{
 	color: #61C3C7;
@@ -65,6 +89,234 @@
   transform: scaleX(1);
 }
 
+
+/* ウィンドウ幅が0〜768pxの場合に適用するCSS */
+@media only screen and (max-width:768px)
+{
+	.header_container{
+		top: 0px;
+		left: 0;
+		width: 100%;
+		z-index: 1000;
+		padding: 0 0px;
+	}
+	#header{
+		background: #FFF;
+		position: relative;
+	}
+	
+	
+.menu-trigger,
+.menu-trigger span {
+  display: inline-block;
+  transition: all .4s;
+  box-sizing: border-box;
+}
+.menu-trigger {
+  position: relative;
+  width: 30px;
+  height: 24px;
+  float: right;
+  margin: 30px 30px 0px 0;
+}
+.menu-trigger span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #5ec2c6;
+}
+.menu-trigger span:nth-of-type(1) {
+  top: 0;
+}
+.menu-trigger span:nth-of-type(2) {
+  top: 10px;
+}
+.menu-trigger span:nth-of-type(3) {
+  bottom: 0;
+}
+
+.menu-trigger::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  content: '';
+  width: 50px;
+  height: 50px;
+  margin: -29px 0 0 -29px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  transition: all .75s;
+}
+.menu-trigger.active span:nth-of-type(1) {
+  -webkit-transform: translateY(20px) rotate(-45deg);
+  transform: translateY(10px) rotate(-45deg);
+}
+.menu-trigger.active span:nth-of-type(2) {
+  left: 60%;
+  opacity: 0;
+  -webkit-animation: active-menu-bar02 .8s forwards;
+  animation: active-menu-bar02 .8s forwards;
+}
+@-webkit-keyframes active-menu-bar02 {
+  100% {
+    height: 0;
+  }
+}
+@keyframes active-menu-bar02 {
+  100% {
+    height: 0;
+  }
+}
+.menu-trigger.active span:nth-of-type(3) {
+  -webkit-transform: translateY(-20px) rotate(45deg);
+  transform: translateY(-10px) rotate(45deg);
+}
+.menu-trigger.active::after {
+  -webkit-animation: circle .4s .25s forwards;
+  animation: circle .4s .25s forwards;
+}
+@-webkit-keyframes circle {
+  0% {
+    border-color: transparent;
+    -webkit-transform: rotate(0);
+  }
+  25% {
+    border-color: transparent #5ec2c6 transparent transparent;
+  }
+  50% {
+    border-color: transparent #5ec2c6 #5ec2c6 transparent;
+  }
+  75% {
+    border-color: transparent #5ec2c6 #5ec2c6 #5ec2c6;
+  }
+  100% {
+    border-color: #5ec2c6;
+    -webkit-transform: rotate(-680deg);
+  }
+}
+@keyframes circle {
+  0% {
+    border-color: transparent;
+    transform: rotate(0);
+  }
+  25% {
+    border-color: transparent #5ec2c6 transparent transparent;
+  }
+  50% {
+    border-color: transparent #5ec2c6 #5ec2c6 transparent;
+  }
+  75% {
+    border-color: transparent #5ec2c6 #5ec2c6 #5ec2c6;
+  }
+  100% {
+    border-color: #5ec2c6;
+    transform: rotate(-680deg);
+  }
+}
+
+	
+	#header #nav{
+		display: none;
+		text-align: center;
+		position: absolute;
+		left: 0;
+		width: 100%;
+		background: #5ec2c6;
+	}
+	#header #nav ul{
+		display: block;
+		padding: 10px 0;
+	}
+	#header #nav ul li{
+		display: block;
+		padding: 10px 0;
+	}
+	#header #nav ul li a{
+		display: inline-block;
+		color: #FFF;
+		font-size: 13px;
+		letter-spacing: 1px;
+		transform: perspective(1px) translateZ(0);
+		position: relative;
+		margin: 0 15px;
+	}
+}
+
+
+
+
+
+
+#footer{
+	clear: both;
+	font-size: 12px;
+	border-bottom: #5ec2c6 5px solid;
+/*	margin: 0 -500px;
+	padding: 0 500px;
+*/}
+#footer small{
+	display: inline-block;
+	float: right;
+	color: #C0C0C0;
+	margin-top: 15px;
+}
+#footer ul{
+	float: left;
+	margin: 15px 0 30px 0;
+}
+
+#footer li{
+	display: inline-block;
+	border-radius: 5px;
+}
+.url_btn a{
+	position:relative;
+	display: inline-block;
+	text-decoration: none;
+	color: #FFF;
+}
+
+.facebook_color{
+	padding: 5px 10px;
+	background: #445FAC;
+}
+.twitter_color{
+	padding: 5px 10px 5px 8px;
+	background: #55acee;
+}
+.github_color{
+	padding: 5px 10px;
+	background: #24292E;
+}
+
+.facebook_color span{
+	padding-left: 17px;
+	background: url(../img/f-Logo.png) no-repeat left center;
+}
+.twitter_color span{
+	padding-left: 20px;
+	background: url(../img/Twitter_Logo.png) no-repeat left center;
+}
+.github_color span{
+	padding: 3px 0 3px 19px;
+	margin-bottom: 10px;
+	background: url(../img/GitHub_Mark.png) no-repeat left center;
+}
+
+.facebook_color:hover{
+	background-color: #899dd6;
+}
+.twitter_color:hover{
+	background-color: #7ac5ff;
+}
+.github_color:hover{
+	background-color: #606060;
+}
+/*==============================*/
+
+/*パンくず設定*/
 .breadcrumb{
 	margin-top: 10px;
 }
@@ -126,93 +378,41 @@
 .breadcrumb ul li a:hover:after {
 		border-left-color: #fa5ba5;
 }
-
-
-#wrap{
+/*==============================*/
+/*about設定*/
+#about_column{
 	clear: both;
 	margin-bottom: 20px;
 	color: #A4A4A4;
+	text-align: center;
 }
 
-#wrap img{
+.profile_icon img{
 	margin: 20px 0;
 	width: 100px;
 	height: 100px;
 }
 
-#wrap .profile th{
-	font-weight:100;
-	text-align:center;
-}
-
 .intro{
-	margin: 10px 0;
 	font-size: 14px;
 }
-
-#footer{
-	clear: both;
-	overflow: hidden;
-	font-size: 12px;
-	border-top: 5px #5ec2c6 solid;
-	margin: 0 -500px;
-	padding: 0 500px 10px;
+#profile{
+	margin: auto;
 }
-#footer small{
-	display: inline-block;
-	float: right;
-	color: #C0C0C0;
-	margin-top: 10px;
+#profile th{
+	padding: 5px 5px 5px 18px;
+	text-align: left;
+	background: url(../img/about_icon.png) no-repeat left 7px;
 }
-#footer ul{
-	float: left;
-	margin-top: 10px;
+#profile td{
+	padding: 5px;
+	text-align: left;
+	line-height: 1.2;
 }
-
-#footer li{
-	display: inline-block;
-	border-radius: 5px;
+.sentence{
+	margin: 20px 0 0 0;
 }
-#footer li a{
-	position:relative;
-	display: inline-block;
-	text-decoration: none;
-	color: #FFF;
+.sentence p{
+	margin: 5px 0 0 0;
 }
-
-.facebook_color{
-	padding: 5px 10px;
-	background: #445FAC;
-}
-
-.twitter_color{
-	padding: 5px 10px 5px 8px;
-	background: #55acee;
-}
-.github_color{
-	padding: 5px 10px;
-	background: #24292E;
-}
-
-.facebook_color span{
-	padding-left: 17px;
-	background: url(../img/f-Logo.png) no-repeat left center;
-}
-.twitter_color span{
-	padding-left: 20px;
-	background: url(../img/Twitter_Logo.png) no-repeat left center;
-}
-.github_color span{
-	padding: 3px 0 3px 19px;
-	background: url(../img/GitHub_Mark.png) no-repeat left center;
-}
-
-.facebook_color:hover{
-	background-color: #899dd6;
-}
-.twitter_color:hover{
-	background-color: #7ac5ff;
-}
-.github_color:hover{
-	background-color: #a0a0a0;
-}
+/*==============================*/
