--- a/css/style_sp.css
+++ b/css/style_sp.css
@@ -95,12 +95,32 @@
         float: none;
         position: static;
     }
+	
+	#nav li a{
+	position: relative;
+    display: inline-block;
+	padding: 2px;
+    text-decoration: none;
+   }
+	
+	#nav li a::after {
+	  width: 100%;
+	  height: 1px;
+	  background-color: #FFF;
+
+	}
+	#nav li a:hover::after {
+	  -webkit-transform: scaleX(1);
+	  -ms-transform: scaleX(1);
+	  transform: scaleX(1);
+	}
+	
     #top-head #nav ul li a,
     #top-head.fixed #nav ul li a {
         width: 100%;
         display: block;
         color: #FFF;
-        padding: 18px 0;
+        margin: 20px 0;
     }
     #nav-toggle {
         display: block;
@@ -150,23 +170,111 @@
 	#slider p{
 	float: right;
 	font-size: 12px;
-	margin-bottom: 50px;
+	margin-bottom: 20px;
     }
 	
 	#footer ul{
 	margin: 15px 0 10px 10px;
     }
 	#footer small{
-	color: #C0C0C0;
-	margin: 10px 10px 15px 0;
+		clear: both;
+		display: block;
+		margin: 0 auto;
+	}
+	
+	#news dd{
+	margin: 5px 0px 0 5px;
     }
 	
 	
 	
-	
-	
 
 
+
+
+}
+
+@media only screen and (max-width:450px)
+{
+	
+	#news{
+		overflow: auto;
+		height: 200px;
+	    margin: 0 10px 30px 10px;
+    }
+
+	#footer{
+	    width: 100%;
+	    clear: both;
+	    border-top: #5ec2c6 5px solid;
+	}
+    #footer .pagetop{
+	    float: right;
+	    margin: 0px 10px 0px 0;
+	    font-size: 12px;
+    }
+    #footer ul{
+	    width: inherit;
+	    float: left;
+	    margin: 15px 0 30px 10px;
+    }
+
+    #footer li{
+	    border-radius: 5px;
+	    font-size: 12px;
+    }
+	#footer small{
+		clear: both;
+		display: inline-block;
+	    margin: auto;
+		padding: 0 0 15px 10px;
+　  }
+	  
+	 #illust_box img,
+	 #design_box img{
+		width: 100px;
+		height: 100px;
+		margin: 4px 2px;
+		border: 1px #A3D8DB solid;
+	}
+	
+	#main_wrap{
+	    margin: 20px 10px;
+    }
+	
+	#profile{
+	    padding: 0;
+    }
+	#profile th{
+		padding: 10px 0px 15px 16px;
+    }
+	#profile td{
+	    padding: 10px 5px 10px 10px;
+    }
+	#profile dd{
+		marign: 0 5px 0 0;
+	}
+	.sentence{
+	margin: 20px 0 0 10px;
+	}
+	
+	.table_form th{
+	padding: 10px 20px 10px 10px;
+	text-align: left;
+	vertical-align: top;
+    }
+
+
+.table_form th{
+	width: 90%;
+	padding: 5%;
+	display:block;
+}
+.table_form td{
+	width: 90%;
+	padding: 0 5% 5%;
+	display:block;
+}
 
 
 }
