--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
 */	margin: 0 auto;
 }
 
+img{
+	vertical-align: bottom;
+}
+
 .inner{
 	max-width: 960px;
 	margin: 0 auto;
@@ -159,15 +163,25 @@ img{
 
 /*フッター設定*/
 #footer{
+	width: 100%;
 	clear: both;
-	font-size: 12px;
-	border-bottom: #5ec2c6 5px solid;
+	border-top: #5ec2c6 5px solid;
 	}
-#footer small{
-	display: inline-block;
+#footer .pagetop{
+	width: 10%;
+	margin: 0px 20px 0px 0;
+	padding: 10px 0;
 	float: right;
+	text-align: center;
+	font-size: 12px;
+	background: #5ec2c6;
+}
+#footer small{
+	clear: both;
+	display: inline-block;
 	color: #C0C0C0;
-	margin: 15px 10px 0px 0;
+	margin: 20px 0px 0px 60px;
+	font-size: 12px;
 }
 #footer ul{
 	float: left;
@@ -176,13 +190,18 @@ img{
 
 #footer li{
 	display: inline-block;
+	margin: 5px 0 0 0;
 	border-radius: 5px;
+	font-size: 12px;
+}
+
+#footer li a{
+	text-decoration: none;
+	color: #FFF;
 }
 .url_btn a{
 	position:relative;
 	display: inline-block;
-	text-decoration: none;
-	color: #FFF;
 }
 
 .facebook_color{
@@ -197,6 +216,30 @@ img{
 	padding: 5px 10px;
 	background: #24292E;
 }
+.instagram_color{
+	position: relative;
+	padding: 5px 10px;
+	color: #FFF;
+    background: -webkit-linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+    background: linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+}
+.instagram_color:before{
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   border-radius: 5px;
+   background: -webkit-linear-gradient(15deg, #ffdb2c, rgb(249, 118, 76) 25%, rgba(255, 77, 64, 0) 50%) no-repeat;
+   background: linear-gradient(15deg, #ffdb2c, rgb(249, 118, 76) 25%, rgba(255, 77, 64, 0) 50%) no-repeat;
+}
+.pixiv_color{
+	padding: 5px 10px;
+	background: #0098E6;
+}
+
+
 
 .facebook_color span{
 	padding-left: 17px;
@@ -211,16 +254,24 @@ img{
 	margin-bottom: 10px;
 	background: url(../img/GitHub_Mark.png) no-repeat left center;
 }
+.instagram_color span{
+	padding: 0 0px 2px 17px;
+	background: url(../img/ins_logo.png) no-repeat left center;
+}
+.pixiv_color span{
+	padding: 0 0 0 17px;
+	background: url(../img/pixiv_logo.png) no-repeat left center;
+}
 
-.facebook_color:hover{
-	background-color: #899dd6;
+
+
+.facebook_color:hover, .twitter_color:hover, .github_color:hover, .instagram_color:hover, .pixiv_color:hover{
+	opacity: 0.5 ;
 }
-.twitter_color:hover{
-	background-color: #7ac5ff;
-}
-.github_color:hover{
-	background-color: #606060;
-}
+
+
+
+
 /*==============================*/
 
 /*パンくず設定*/
@@ -305,11 +356,10 @@ img{
 	filter: grayscale(0);
 }
 
-
-
-#slider{
-	clear:both;
+.column2{
+	border-top: #5ec2c6 5px solid;
 }
+
 #slider p{
 	float: right;
 	font-size: 12px;
@@ -325,23 +375,23 @@ img{
 
 #slider{
 	clear: both;
-	width: 90%;
+	width: 85%;
 	max-width: 960px;
 	text-align: center;
-    margin: auto;
+    margin: 20px auto 0;
 }
 #slider img{
 	width: 120px;
 	height: 120px;
 	object-fit: cover;
-	margin: 5px 5px;
-	border: 2px #A3D8DB solid;
+	margin: 5px 5px 0 5px;
+	border: 2px #CCC solid;
 	border-radius: 5px;
 }
 
 
     .slick-slide {
-      margin: 0px 20px;
+      margin: 0px 10px;
     }
 
     .slick-slide img {
@@ -367,18 +417,85 @@ img{
       opacity: 1;
     }
 
+
+.slick-dots li button {
+	width: 5px !important;
+	height: 5px !important;
+	background: #999 !important;
+	border-radius: 5px;
+}
+.slick-dots li.slick-active button{
+    background: #fa5ba5!important;
+}
+.slick-active{
+	opacity:1!important;
+}
+
+
+#news{
+	clear: both;
+	max-width: 960px;
+	margin: 60px auto 50px;
+	border: #5ec2c6 2px solid;
+	border-radius: 5px;
+	padding: 0 0 20px 0;
+}
+
+#news h2{
+	padding: 10px 0 10px 20px;
+	font-size: 18px;
+	color: #FFF;
+	background: #5ec2c6;
+}
+#news dl{
+	width: 100%;
+	margin: 15px 15px 0 0;
+	overflow: hidden;
+	border-bottom: #8aeef2 1px dotted;
+}
+#news dt{
+    float:left;
+	margin: 3px 10px 5px 20px;
+	color: #777;
+}
+#news dd{
+	max-width: 760px;
+    float: left;
+	margin: 5px 5px 0 5px;
+	padding: 0 0px 10px 20px;
+	color: #777;
+}
+
+#news dd span.cat{
+	display:block;
+	width: 70px;
+	float: left;
+	margin: 0 10px 0 0px;
+	text-align: center;
+	border: #EEE 1px solid;
+	border-radius: 2px;
+	font-size: 12px;
+	background-color: #EEE;
+}
+#news dd span.cat a{
+	color: #777;
+	text-decoration: none;
+}
+
 /*==============================*/
 
 /*about設定*/
 #about_column{
 	clear: both;
-	margin-bottom: 20px;
+	width: 100%;
+	margin: 10px auto 50px;
 	color: #A4A4A4;
 	text-align: center;
+	line-height: 1.3;
 }
 
 .profile_icon img{
-	margin: 20px 0;
+	margin: 10px 0;
 	width: 100px;
 	height: 100px;
 }
@@ -387,23 +504,31 @@ img{
 	font-size: 14px;
 }
 #profile{
-	margin: auto;
+	width: 500px;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 40px;
 }
+
+
 #profile th{
-	padding: 5px 5px 5px 18px;
+	padding: 10px 5px 15px 18px;
 	text-align: left;
-	background: url(../img/about_icon.png) no-repeat left 7px;
+	background: url(../img/about_icon.png) no-repeat left 12px;
 }
 #profile td{
-	padding: 5px;
+	padding: 10px;
 	text-align: left;
-	line-height: 1.2;
+}
+
+#profile dd{
+	margin: 0 0 15px 0;
+	padding-bottom: 3px;
+	border-bottom: #d7e2e8 1px dashed;
 }
 .sentence{
 	margin: 20px 0 0 0;
-}
-.sentence p{
-	margin: 5px 0 0 0;
+	text-align: left;
 }
 
 
@@ -411,7 +536,7 @@ img{
 
 /*works設定*/
 .text1{ 
-	margin: 20px 800px 10px 10px;
+	margin: 20px 0px 10px 10px;
 	color: #5ec2c6;
 	border-bottom: #5ec2c6 2px dotted;
 }
@@ -430,7 +555,7 @@ img{
 	height: 140px;
 	object-fit: cover;
 	margin: 5px 5px;
-	border: 2px #A3D8DB solid;
+	border: 2px #ccc solid;
 	border-radius: 5px;
 }
 /*==============================*/
@@ -438,17 +563,18 @@ img{
 /*contact設定*/
 #main_wrap{
 	font-size: 14px;
-	margin: 20px 30px;
+	margin: 20px 50px;
 }
-.column1{
-	text-align: center;
-	margin-bottom: 15px;
+#main_wrap .column1{
+	text-align: left;
+	margin: 0 0 15px 10px;
 }
-.column1 a{
+#main_wrap .column1 a{
 	text-decoration: none;
-	color:  #A4A4A4;
+	color: #A4A4A4;
 }
-.table_form span{
+
+.table_form th span{
 	color: #fa5ba5;
 }
 
@@ -462,6 +588,7 @@ img{
 	width:100%;
 }
 .table_form th{
+	width: 30%;
 	padding: 10px;
 	text-align: left;
 	vertical-align: top;
@@ -474,3 +601,60 @@ img{
 	text-align: center;
 }
 
+.table_form td input{
+	border: 1px solid #ccc;F
+}
+
+/*==============================*/
+
+/*確認画面設定*/
+
+.inner h3{
+	margin: 5px auto 0;
+}
+.center{
+	width: 100%;
+	margin: 0 auto;
+	padding: 0 0 10px 0;
+	text-align: center;
+}
+
+/*==============================*/
+
+/*thanks設定*/
+
+#thanks{
+	margin: 40px 10px 35px;
+	border: #999 2px solid;
+	border-radius: 5px;
+	color: #333;
+}
+
+#thanks h2{
+	margin: 0 10px;
+	padding: 20px 0 10px 20px;
+	font-size: 16px;
+	border-bottom: #999 1px solid;
+}
+.message{
+	margin: 0 10px;
+	padding: 20px;
+	font-size: 14px;
+}
+.message p{
+	margin-bottom: 5px;
+}
+
+a:link,
+a:visited{
+	color : #4040ff;
+	text-decoration : underline;
+}
+
+a:hover,
+a:active{
+	color : #4040ff;
+	text-decoration : none;
+}
+
+/*==============================*/
