--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ img{
 
 /*index設定*/
 #contents figure{
-	margin: 30px 0px;
+	margin: 20px 0px;
 	text-align: center;
 }
 #contents figure img {
@@ -545,12 +545,18 @@ img{
 	text-align:center;
 	margin: 0px 0 20px; 
 }
-#design_box{
+#design_box01{
 	text-align: center;
 	margin: 0px 0 20px; 
 }
+#design_box02{
+	text-align: center;
+	margin: 0px 0 20px; 
+}
+
 #illust_box img,
-#design_box img{
+#design_box01 img,
+#design_box02 img{
 	width: 140px;
 	height: 140px;
 	object-fit: cover;
